# warmai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  __main__.py  api.py  db.py  logging.py  mailer.py  models.py  scheduler.py  schemas.py  security.py  settings.py  utils.py
backend/app/routers/: auth.py  email_lists.py  mail_servers.py  warmups.py
backend/tests/: test_scheduler_logic.py  test_security.py  test_utils.py
docs/: api.md  architecture.md  deployment.md  development.md  env.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/email-lists/: page.tsx
frontend/src/app/(dashboard)/mail-servers/: page.tsx
frontend/src/app/(dashboard)/mail-servers/new/: page.tsx
frontend/src/app/(dashboard)/warmups/: page.tsx
frontend/src/app/(dashboard)/warmups/[id]/: page.tsx
frontend/src/app/(dashboard)/warmups/new/: page.tsx
frontend/src/components/: page-header.tsx  providers.tsx  status-bar.tsx  theme-provider.tsx  theme-toggle.tsx
